--- a/CasoDeEstudio1/src/entities/config.properties
+++ b/CasoDeEstudio1/src/entities/config.properties
@@ -1,3 +1,3 @@
 claseJDBC = com.mysql.cj.jdbc.Driver
-stringConexion =jdbc:mysql://localhost/bdbiblioteca?allowPublicKeyRetrieval=true&serverTimezone=UTC&user=root&password=la120498*&useSSL=false
+stringConexion =jdbc:mysql://localhost/bdbiblioteca?user=root&password=9Varguitas!&useSSL=false&serverTimezone=America/Mexico_City
 
